--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -4,14 +4,14 @@ password=admin
 driver=org.postgresql.Driver
 #classpath=postgresql-9.2-1002-jdbc4.jar
 outputChangeLogFile=src/main/resources/liquibase/changelog/liquibase-outputchangeLog.xml
+changeLogFile=src/main/resources/liquibase/changelog/liquibase-changeLog.xml
+diffChangeLogFile=src/main/resources/liquibase/changelog/liquibase-diff-changeLog.xml
 
 ##MVN commands for Reference
 ##mvn liquibase:generateChangeLog
 ##mvn liquibase:diff
 
 ##liquidbase cofig to Generate a ChangeLog From Diff Between Two Databases
-#changeLogFile=src/main/resources/db/changelog/liquibase-changeLog.xml
-#diffChangeLogFile=src/main/resources/db/changelog/liquibase-diff-changeLog.xml
 #referenceUrl=jdbc:postgresql://devnimsnonclinical.dcservices.in:5445/elcomradeshipAnotherDb
 #referenceUrl=hibernate:spring:com.elcomrades.hip.domain.model?
 #dialect=org.hibernate.dialect.MySQLDialect
