--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,7 +41,6 @@
 			<groupId>org.liquibase</groupId>
 			<artifactId>liquibase-core</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -72,30 +72,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger-ui -->
-		<!--<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger-ui</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		 https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 
-		<dependency>
-			<groupId>io.springfox</groupId>
-			<artifactId>springfox-swagger2</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		 https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations 
-		<dependency>
-			<groupId>io.swagger.core.v3</groupId>
-			<artifactId>swagger-annotations</artifactId>
-			<version>2.2.2</version>
-		</dependency>-->
-				<!--for spring boot 3-->
+		<!--for spring boot 3-->
 	   <dependency>
 	      <groupId>org.springdoc</groupId>
 	      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 	      <version>2.1.0</version>
 	   </dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -112,7 +99,31 @@
 					</excludes>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+			     <groupId>org.liquibase</groupId>
+			     <artifactId>liquibase-maven-plugin</artifactId>
+			     <configuration>
+			        <propertyFile>src/main/resources/liquibase/liquibase.properties</propertyFile>
+			     </configuration>
+			     <!--<configuration>
+				      <driver>org.postgresql.Driver</driver>
+				      <url>jdbc:postgresql://localhost:5432/postgres?currentSchema=pilotautomation</url>
+				      <username>postgres</username>
+				      <password>admin</password>
+				      <outputChangeLogFile>src/main/resources/liquibase/changelog/liquibase-outputchangeLog.xml</outputChangeLogFile>
+				   </configuration>-->
+				   
+		     <!--<dependencies>
+			         set up any dependencies for Liquibase to function in your
+			         environment for example, a database-specific plugin
+			         <dependency>
+			             <groupId>com.h2database</groupId>
+			             <artifactId>h2</artifactId>
+			             <version>2.1.214</version>
+			         </dependency>
+			     </dependencies>-->
+			</plugin>
 		</plugins>
 	</build>
-
 </project>
