--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,6 +29,7 @@ spring:
 #---------------------------------------------------------------------
 
 springdoc:
+  version: v1.1
   api-docs:
     enabled: true
     path: /api-docs-json
