--- a/src/main/resources/liquibase/liquibase.properties
+++ b/src/main/resources/liquibase/liquibase.properties
@@ -1,4 +1,4 @@
-url: jdbc:postgresql://localhost:5432/postgres?currentSchema=pilotautomation
+url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
 username=postgres
 password=admin
 driver=org.postgresql.Driver
