--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ management:
 #---------------------------------------------------------------------
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=pilotautomation
+    url: jdbc:postgresql://localhost:5432/postgres?currentSchema=public
     username: postgres
     password: admin
     hikari:
@@ -15,12 +15,13 @@ spring:
      auto-commit: true
   jpa:
     hibernate:
-      ddl-auto: create #update #none #create
+      ddl-auto: update #create #none
     show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        default_schema: pilotautomation
+        default_schema: public
+        format_sql: true
   liquibase:
     enabled: true
     change-log: classpath:liquibase/changelog/liquibase-changeLog.xml
@@ -34,7 +35,13 @@ spring:
     
 #---------------------------------------------------------------------
 server:
-  host: locahost
+  host: 10.9.80.233
   port: 8443
   
 #---------------------------------------------------------------------
+
+logging.level.org.hibernate.SQL: DEBUG #Logs SQL statements at DEBUG level.
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE #Logs placeholder values in SQL.
+logging.level.org.hibernate.type: TRACE #Detailed logging for all Hibernate types.
+
+tds.featurelist.property: tds.rogueradio.enable,tds.ovt.terminalstats.enable,tds.api.default.satellite
